--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "tvdb-rest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": ***REMOVED***
     "express": "^4.16.2",
-    "mongoose": "^4.13.9"
+    "mongoose": "^4.13.9",
+    "node-tvdb": "^3.2.0"
   ***REMOVED***,
   "devDependencies": ***REMOVED***
     "nodemon": "^1.14.11"
@@ -13,15 +14,5 @@
   "scripts": ***REMOVED***
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
-  ***REMOVED***,
-  "repository": ***REMOVED***
-    "type": "git",
-    "url": "git+https://github.com/AyyKamp/tvdb-rest.git"
-  ***REMOVED***,
-  "author": "",
-  "license": "ISC",
-  "bugs": ***REMOVED***
-    "url": "https://github.com/AyyKamp/tvdb-rest/issues"
-  ***REMOVED***,
-  "homepage": "https://github.com/AyyKamp/tvdb-rest#readme"
+  ***REMOVED***
 ***REMOVED***
