--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   ***REMOVED***,
   "scripts": ***REMOVED***
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "npm server.js"
   ***REMOVED***
 ***REMOVED***
