--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": ***REMOVED***
     "express": "^4.16.2",
+    "firebase-admin": "^5.8.1",
     "node-tvdb": "^3.2.0"
   ***REMOVED***,
   "devDependencies": ***REMOVED***
