--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nodemon": "^1.14.11"
   ***REMOVED***,
   "scripts": ***REMOVED***
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "node ./fcm/admin.js",
+    "start": "node ./fcm/admin.js"
   ***REMOVED***
 ***REMOVED***
