added fcm ((experimental)
also cleaned up html sites so that they arent stored thrice.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   ***REMOVED***,
   "scripts": ***REMOVED***
     "test": "node ./fcm/admin.js",
-    "start": "node ./fcm/admin.js"
+    "start": "nodemon server.js"
   ***REMOVED***
 ***REMOVED***
