--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": ***REMOVED***
+    "eslint": "^4.17.0",
     "express": "^4.16.2",
     "firebase-admin": "^5.8.1",
     "node-tvdb": "^3.2.0"
@@ -12,7 +13,7 @@
     "nodemon": "^1.14.11"
   ***REMOVED***,
   "scripts": ***REMOVED***
-    "test": "node ./fcm/admin.js",
+    "test": "nodemon server.js",
     "start": "node server.js"
   ***REMOVED***
 ***REMOVED***
