--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": ***REMOVED***
     "eslint": "^4.17.0",
     "express": "^4.16.2",
+    "firebase": "^4.9.1",
     "firebase-admin": "^5.8.1",
     "node-tvdb": "^3.2.0"
   ***REMOVED***,
