--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "node-tvdb": "^3.2.0"
   ***REMOVED***,
   "devDependencies": ***REMOVED***
+    "babel-cli": "^6.26.0",
+    "babel-preset-flow": "^6.23.0",
     "nodemon": "^1.14.11"
   ***REMOVED***,
   "scripts": ***REMOVED***
     "test": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "babel ./gets -d lib/"
   ***REMOVED***
 ***REMOVED***
