--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "test": "nodemon server.js",
     "start": "node server.js"
   ***REMOVED***,
-  ***REMOVED*** "engines" : ***REMOVED*** 
+  "engines" : ***REMOVED*** 
     "node" : "8.9.4" 
-    ***REMOVED*** 
   ***REMOVED***
 ***REMOVED***
