--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "firebase-admin": "^5.8.1",
     "heroku-client": "^3.0.6",
     "node-tvdb": "^3.2.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "shelljs": "^0.8.1"
   ***REMOVED***,
   "devDependencies": ***REMOVED***
     "babel-cli": "^6.26.0",
