--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": ***REMOVED***
+    "cron": "^1.3.0",
     "dotenv": "^5.0.1",
     "eslint": "^4.17.0",
     "express": "^4.16.2",
