--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 ***REMOVED***
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,   
-    "vscode_custom_css.imports": ["file:///Users/downl/documents/styles.css"]
+    "vscode_custom_css.imports": [
+        "file:///Users/downl/documents/styles.css"
+    ],
+    "editor.tabSize": 2
 ***REMOVED***
