--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": ***REMOVED***
+    "cors": "^2.8.4",
     "cron": "^1.3.0",
     "dotenv": "^5.0.1",
     "eslint": "^4.17.0",
