--- a/package.json
+++ b/package.json
@@ -7,23 +7,20 @@
     "cors": "^2.8.4",
     "cron": "^1.3.0",
     "dotenv": "^5.0.1",
-    "eslint": "^4.17.0",
     "express": "^4.16.2",
     "firebase": "^4.9.1",
     "firebase-admin": "^5.8.1",
     "heroku-client": "^3.0.6",
-    "node-tvdb": "^3.2.0",
-    "request-promise": "^4.2.2",
-    "shelljs": "^0.8.1"
+    "node-tvdb": "^3.2.0"
   ***REMOVED***,
   "devDependencies": ***REMOVED***
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "eslint": "^4.17.0"
   ***REMOVED***,
   "scripts": ***REMOVED***
     "test": "nodemon server.js",
-    "yes": "nodemon tvdb-de.js",
     "start": "node server.js"
   ***REMOVED***,
   "engines": ***REMOVED***
